added model and distribution convergence options for  MCLRT, MMClRT and BootLRT

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(MSloglik_const_eq)
 export(MSloglik_const_ineq)
 export(MSloglik_fun)
 export(MSloglik_fun_min)
-export(QMCtest)
+export(PMCTest)
 export(VAREMaximization)
 export(VARmdl)
 export(VARparamList)
