added LRT_dist_par function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(EMest_VAR)
 export(EMiter)
 export(EMiter_VAR)
 export(LR_samp_dist)
+export(LR_samp_dist_par)
 export(MCLRTest)
 export(MCpval)
 export(MMCLRTest)
