added CHP test + fixed multiple initial values bug in estimation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ARmdl)
 export(BootLRTest)
+export(CHPtest)
 export(DLMCTest)
 export(DLMMCTest)
 export(DLMMCpval_fun)
@@ -35,12 +36,17 @@ export(VARparamList)
 export(approxDistDL)
 export(approxDistQ)
 export(approx_dist_loop)
+export(bootCV)
 export(calcMSResid)
 export(calcMSVARResid)
 export(calc_DLmcstat)
 export(calc_DLmoments)
 export(calc_Qmcstat)
 export(calc_Qmoments)
+export(calc_mu2t)
+export(calc_mu2t_mv)
+export(chpDmat)
+export(chpStat)
 export(combine_stat)
 export(cov2corr)
 export(finitemat)
