update vech functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,8 @@ export(chpDmat)
 export(chpStat)
 export(combine_stat)
 export(cov2corr)
+export(covar_unvech)
+export(covar_vech)
 export(getHess)
 export(initValsMS)
 export(initValsMSVAR)
@@ -57,8 +59,6 @@ export(musigVARGrid)
 export(paramListMS)
 export(paramListMSVAR)
 export(randTransMat)
-export(sig_mattovec)
-export(sig_vectomat)
 export(sim_DLmoments)
 export(simuAR)
 export(simuMS)
