update transition matrix functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,7 +58,7 @@ export(musigGrid)
 export(musigVARGrid)
 export(paramListMS)
 export(paramListMSVAR)
-export(randTransMat)
+export(randP)
 export(sim_DLmoments)
 export(simuAR)
 export(simuMS)
