update methods.cpp file - changes to simulation functions and added simuNorm and simuHMM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,8 +61,10 @@ export(paramListMSVAR)
 export(randP)
 export(sim_DLmoments)
 export(simuAR)
-export(simuMS)
+export(simuHMM)
+export(simuMSAR)
 export(simuMSVAR)
+export(simuNorm)
 export(simuVAR)
 export(transMatAR)
 export(ts_lagged)
