update and document methods.R functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(VAR_loglik_fun)
 export(VARmdl)
 export(approxDistDL)
 export(approx_dist_loop)
+export(arGrid)
+export(arP)
 export(bootCV)
 export(calcMSResid)
 export(calcMSVARResid)
@@ -54,8 +56,6 @@ export(getHess)
 export(initValsMS)
 export(initValsMSVAR)
 export(limP)
-export(musigGrid)
-export(musigVARGrid)
 export(paramListMS)
 export(paramListMSVAR)
 export(randP)
@@ -66,7 +66,7 @@ export(simuMSAR)
 export(simuMSVAR)
 export(simuNorm)
 export(simuVAR)
-export(transMatAR)
 export(ts_lagged)
+export(varGrid)
 importFrom(Rcpp,sourceCpp)
 useDynLib(MSTest, .registration = TRUE)
