update MSARmdl with S3 class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,7 @@ S3method(getHessian,MSVARmdl)
 S3method(getHessian,VARmdl)
 S3method(logLikelihood,ARmdl)
 S3method(logLikelihood,VARmdl)
-export(AR_loglik_fun)
 export(ARmdl)
-export(ARmdl_cpp)
 export(BootLRTest)
 export(CHPtest)
 export(DLMCTest)
@@ -24,7 +22,7 @@ export(MMCLRpval_fun)
 export(MMCLRpval_fun_max)
 export(MMC_bounds)
 export(MMC_bounds_univariate)
-export(MSARmdl_EM)
+export(MSARmdl)
 export(MSVAR_EMaximization)
 export(MSVAR_EMest)
 export(MSVAR_EMiter)
@@ -38,7 +36,6 @@ export(MS_EMiter)
 export(MSloglik)
 export(MSloglik_fun)
 export(MSloglik_fun_min)
-export(VAR_loglik_fun)
 export(VARmdl)
 export(approxDistDL)
 export(approx_dist_loop)
@@ -75,6 +72,7 @@ export(simuMSAR)
 export(simuMSVAR)
 export(simuNorm)
 export(simuVAR)
+export(thetaSE)
 export(ts_lagged)
 export(varGrid)
 importFrom(Rcpp,sourceCpp)
