added HMM estimated by MLE and examples for simulating and estimating functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(print,ARmdl)
 S3method(print,HMmdl)
 S3method(print,MSARmdl)
 S3method(print,MSVARmdl)
+S3method(print,Nmdl)
 S3method(print,VARmdl)
 export(ARmdl)
 export(BootLRTest)
@@ -35,6 +36,7 @@ export(ExpectationM_MSARmdl)
 export(ExpectationM_MSVARmdl)
 export(HMmdl)
 export(HMmdl_em)
+export(HMmdl_mle)
 export(LMCLRTest)
 export(LR_samp_dist)
 export(LR_samp_dist_par)
