--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: MSTest
 Type: Package
 Title: MSTest: An R-package For Testing Markov-Switching Models
-Version: 2.0
-Date: 2021-07-07
+Date: 2022-08-03
+Version: 0.1.2
 Authors@R: c(
   person("Gabriel", "Rodriguez Rondon", email = "gabriel.rodriguezrondon@mail.mcgill.ca",role = c("aut", "cre")), 
   person("Jean-Marie", "Dufour", email = "jean-marie.dufour@mcgill.ca",role = c("aut")))
 Maintainer: Gabriel Rodriguez  <gabriel.rodriguezrondon@mail.mcgill.ca>
-Description: This package allows the user to test the null hypothesis of a linear model against the alternative of a markov switching model. The package includes Likelihood Ratio (LR) type tests (Hansen 1996), The optimal test for markov switching parameters proposed by Carrasco et al. (2014), and the moment based test proposed by Dufour & Luger (2017).
-License: MIT
+Description: This package implements hypothesis testing procedures that can be used to identify the number of regimes in a Markov-Switching model.
+License: GPL(>= 3)
 Imports: Rcpp (>= 1.0.1), RcppArmadillo, numDeriv, lmf, GenSA, pso, GA
 LinkingTo: Rcpp, RcppArmadillo, numDeriv, lmf, GenSA, pso, GA
 LazyData: true
 RoxygenNote: 7.1.1
 Depends: R (>= 2.10), lmf
 Encoding: UTF-8
+URL: https://github.com/roga11/MSTest
