--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,26 @@ Authors@R: c(
 Maintainer: Gabriel Rodriguez  <gabriel.rodriguezrondon@mail.mcgill.ca>
 Description: This package implements hypothesis testing procedures that can be used to identify the number of regimes in a Markov-Switching model.
 License: GPL(>= 3)
-Imports: Rcpp (>= 1.0.1), RcppArmadillo, numDeriv, lmf, GenSA, pso, GA
-LinkingTo: Rcpp, RcppArmadillo, numDeriv, lmf, GenSA, pso, GA
 LazyData: true
 RoxygenNote: 7.1.1
-Depends: R (>= 2.10), lmf
 Encoding: UTF-8
 URL: https://github.com/roga11/MSTest
+Imports: 
+  Rcpp (>= 1.0.1), 
+  RcppArmadillo, 
+  numDeriv, 
+  lmf, 
+  GenSA, 
+  pso, 
+  GA
+LinkingTo: 
+  Rcpp, 
+  RcppArmadillo, 
+  numDeriv, 
+  lmf, 
+  GenSA, 
+  pso, 
+  GA
+Depends: 
+  R (>= 2.10), 
+  lmf
