update CHP test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ S3method(logLikelihood,MSVARmdl)
 S3method(logLikelihood,Nmdl)
 S3method(logLikelihood,VARmdl)
 S3method(print,ARmdl)
+S3method(print,CHPTest)
+S3method(print,DLMCTest)
 S3method(print,HMmdl)
 S3method(print,MSARmdl)
 S3method(print,MSVARmdl)
@@ -20,11 +22,11 @@ S3method(print,Nmdl)
 S3method(print,VARmdl)
 export(ARmdl)
 export(BootLRTest)
-export(CHPtest)
+export(CHPTest)
 export(DLMCTest)
 export(DLMMCTest)
 export(DLMMCpval_fun)
-export(DLMMCpval_fun_max)
+export(DLMMCpval_fun_min)
 export(EMaximization_HMmdl)
 export(EMaximization_MSARmdl)
 export(EMaximization_MSVARmdl)
