update DL moment based test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(logLikelihood,VARmdl)
 S3method(print,ARmdl)
 S3method(print,CHPTest)
 S3method(print,DLMCTest)
+S3method(print,DLMMCTest)
 S3method(print,HMmdl)
 S3method(print,MSARmdl)
 S3method(print,MSVARmdl)
