keep different versions of LRT_samp_dist in history - v3 was fastest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,9 +42,10 @@ export(HMmdl_em)
 export(HMmdl_mle)
 export(LMCLRTest)
 export(LR_samp_dist)
-export(LR_samp_dist_par)
+export(LR_samp_dist2)
+export(LR_samp_dist3)
+export(LR_samp_dist4)
 export(MCpval)
-export(MMCLRTest)
 export(MMCLRpval_fun)
 export(MMCLRpval_fun_max)
 export(MMC_bounds)
@@ -77,6 +78,8 @@ export(companionMat)
 export(cov2corr)
 export(covar_unvech)
 export(covar_vech)
+export(estimMdl)
+export(estimMdl2)
 export(getHessian)
 export(initVals_HMmdl)
 export(initVals_MSARmdl)
@@ -100,6 +103,7 @@ export(simuAR)
 export(simuHMM)
 export(simuMSAR)
 export(simuMSVAR)
+export(simuMdl)
 export(simuNorm)
 export(simuVAR)
 export(thetaSE)
