updating LRT Test functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(print,CHPTest)
 S3method(print,DLMCTest)
 S3method(print,DLMMCTest)
 S3method(print,HMmdl)
+S3method(print,LMCLRTest)
 S3method(print,MSARmdl)
 S3method(print,MSVARmdl)
 S3method(print,Nmdl)
@@ -42,9 +43,7 @@ export(HMmdl_em)
 export(HMmdl_mle)
 export(LMCLRTest)
 export(LR_samp_dist)
-export(LR_samp_dist2)
-export(LR_samp_dist3)
-export(LR_samp_dist4)
+export(LR_samp_dist_par)
 export(MCpval)
 export(MMCLRpval_fun)
 export(MMCLRpval_fun_max)
@@ -79,7 +78,6 @@ export(cov2corr)
 export(covar_unvech)
 export(covar_vech)
 export(estimMdl)
-export(estimMdl2)
 export(getHessian)
 export(initVals_HMmdl)
 export(initVals_MSARmdl)
