updated simulation functions to allow user to input own standard normal errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(logLikelihood)
 export(paramList_MSARmdl)
 export(paramList_MSVARmdl)
 export(randP)
+export(randSN)
 export(sim_DLmoments)
 export(simuAR)
 export(simuHMM)
