--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(logLikelihood,MSVARmdl)
 S3method(logLikelihood,Nmdl)
 S3method(logLikelihood,VARmdl)
 S3method(print,ARmdl)
+S3method(print,BootLRTest)
 S3method(print,CHPTest)
 S3method(print,DLMCTest)
 S3method(print,DLMMCTest)
@@ -39,6 +40,8 @@ export(EMiter_MSVARmdl)
 export(ExpectationM_HMmdl)
 export(ExpectationM_MSARmdl)
 export(ExpectationM_MSVARmdl)
+export(HLRTest)
+export(HLRparamSearch)
 export(HMmdl)
 export(HMmdl_em)
 export(HMmdl_mle)
@@ -73,12 +76,14 @@ export(calc_mu2t)
 export(calc_mu2t_mv)
 export(chpDmat)
 export(chpStat)
+export(clike)
 export(combine_stat)
 export(companionMat)
 export(compu_tstat)
 export(cov2corr)
 export(covar_unvech)
 export(covar_vech)
+export(dmclike)
 export(estimMdl)
 export(getHessian)
 export(initVals_HMmdl)
@@ -95,6 +100,8 @@ export(logLike_MSVARmdl_min)
 export(logLike_Nmdl)
 export(logLike_VARmdl)
 export(logLikelihood)
+export(marklike)
+export(mclike)
 export(mdledit)
 export(paramList_MSARmdl)
 export(paramList_MSVARmdl)
