--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MSTest
 Type: Package
-Title: Hypothesis Testing For Markov Switching Models
+Title: Hypothesis Testing for Markov Switching Models
 Date: 2022-10-11
 Version: 0.1.0
 Authors@R:
@@ -13,7 +13,7 @@ Authors@R:
            role = c("aut"),
            email = "jean-marie.dufour@mcgill.ca"))
 Maintainer: Gabriel Rodriguez Rondon <gabriel.rodriguezrondon@mail.mcgill.ca>
-Description: This package implements hypothesis testing procedures that can be used to identify the number of regimes in a Markov-Switching model.
+Description: Implementation of hypothesis testing procedures described in Hansen (1992), Carrasco, Hu, & Ploberger (2014), Dufour & Luger (2017), and Rodriguez Rodnon & Dufour (2022) that can be used to identify the number of regimes in Markov switching models.
 License: GPL(>= 3)
 LazyData: TRUE
 RoxygenNote: 7.2.1
