shortened examples and removed some that take very long

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
            role = c("aut"),
            email = "jean-marie.dufour@mcgill.ca"))
 Maintainer: Gabriel Rodriguez Rondon <gabriel.rodriguezrondon@mail.mcgill.ca>
-Description: Implementation of hypothesis testing procedures described in Hansen (1992), Carrasco, Hu, & Ploberger (2014), Dufour & Luger (2017), and Rodriguez Rodnon & Dufour (2022) that can be used to identify the number of regimes in Markov switching models.
+Description: Implementation of hypothesis testing procedures described in Hansen (1992), Carrasco, Hu, & Ploberger (2014), Dufour & Luger (2017), and Rodriguez Rondon & Dufour (2022) that can be used to identify the number of regimes in Markov switching models.
 License: GPL(>= 3)
 LazyData: TRUE
 RoxygenNote: 7.2.1
