added DLMMC_bounds(), lower & upper bounds for P in MMCLRTest(), lower & upper bounds for phi in DLMMCTest(), and mle_theta_low & mle_theta_upp for MLE estimation in HMmdl(), MSARmdl(), and MSVARmdl().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(BootLRTest)
 export(CHPTest)
 export(DLMCTest)
 export(DLMMCTest)
+export(DLMMC_bounds)
 export(DLMMCpval_fun)
 export(DLMMCpval_fun_min)
 export(EMaximization_HMmdl)
