changed how MMC uses maxit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,9 @@ S3method(print,MSARmdl)
 S3method(print,MSVARmdl)
 S3method(print,Nmdl)
 S3method(print,VARmdl)
+export(AIC)
 export(ARmdl)
+export(BIC)
 export(BootLRTest)
 export(CHPTest)
 export(DLMCTest)
@@ -63,13 +65,11 @@ export(MSVARmdl_em)
 export(MSVARmdl_mle)
 export(Nmdl)
 export(VARmdl)
-export(aic)
 export(approxDistDL)
 export(approx_dist_loop)
 export(arP)
 export(argrid_MSARmdl)
 export(argrid_MSVARmdl)
-export(bic)
 export(bootCV)
 export(calcResid_MSARmdl)
 export(calcResid_MSVARmdl)
