added classes to simulation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,12 +165,18 @@ export(randP)
 export(randSN)
 export(sim_DLmoments)
 export(simuAR)
+export(simuAR_cpp)
 export(simuHMM)
+export(simuHMM_cpp)
 export(simuMSAR)
+export(simuMSAR_cpp)
 export(simuMSVAR)
+export(simuMSVAR_cpp)
 export(simuMdl)
 export(simuNorm)
+export(simuNorm_cpp)
 export(simuVAR)
+export(simuVAR_cpp)
 export(thetaSE)
 export(ts_lagged)
 import(stats)
