added plot method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,18 @@ S3method(nobs,MSARmdl)
 S3method(nobs,MSVARmdl)
 S3method(nobs,Nmdl)
 S3method(nobs,VARmdl)
+S3method(plot,ARmdl)
+S3method(plot,Hmmdl)
+S3method(plot,MSARmdl)
+S3method(plot,MSVARmdl)
+S3method(plot,Nmdl)
+S3method(plot,VARmdl)
+S3method(plot,simuAR)
+S3method(plot,simuHMM)
+S3method(plot,simuMSAR)
+S3method(plot,simuMSVAR)
+S3method(plot,simuNorm)
+S3method(plot,simuVAR)
 S3method(predict,ARmdl)
 S3method(predict,HMmdl)
 S3method(predict,MSARmdl)
