added fixed regressors to multivariate models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,11 +49,15 @@ S3method(plot,MSVARmdl)
 S3method(plot,Nmdl)
 S3method(plot,VARmdl)
 S3method(plot,simuAR)
+S3method(plot,simuARX)
 S3method(plot,simuHMM)
 S3method(plot,simuMSAR)
+S3method(plot,simuMSARX)
 S3method(plot,simuMSVAR)
+S3method(plot,simuMSVARX)
 S3method(plot,simuNorm)
 S3method(plot,simuVAR)
+S3method(plot,simuVARX)
 S3method(predict,ARmdl)
 S3method(predict,HMmdl)
 S3method(predict,MSARmdl)
@@ -94,8 +98,8 @@ S3method(summary,Nmdl)
 S3method(summary,VARmdl)
 export(ARXmdl)
 export(ARmdl)
-export(BootLRTest)
 export(CHPTest)
+export(CHPbootCV)
 export(DLMCTest)
 export(DLMMCTest)
 export(DLMMC_bounds)
@@ -104,14 +108,17 @@ export(DLMMCpval_fun_min)
 export(EMaximization_HMmdl)
 export(EMaximization_MSARXmdl)
 export(EMaximization_MSARmdl)
+export(EMaximization_MSVARXmdl)
 export(EMaximization_MSVARmdl)
 export(EMiter_HMmdl)
 export(EMiter_MSARXmdl)
 export(EMiter_MSARmdl)
+export(EMiter_MSVARXmdl)
 export(EMiter_MSVARmdl)
 export(ExpectationM_HMmdl)
 export(ExpectationM_MSARXmdl)
 export(ExpectationM_MSARmdl)
+export(ExpectationM_MSVARXmdl)
 export(ExpectationM_MSVARmdl)
 export(HLRTest)
 export(HLRparamSearch)
@@ -131,6 +138,8 @@ export(MSARXmdl_em)
 export(MSARmdl)
 export(MSARmdl_em)
 export(MSARmdl_mle)
+export(MSVARXmdl)
+export(MSVARXmdl_em)
 export(MSVARmdl)
 export(MSVARmdl_em)
 export(MSVARmdl_mle)
@@ -142,9 +151,9 @@ export(approx_dist_loop)
 export(arP)
 export(argrid_MSARmdl)
 export(argrid_MSVARmdl)
-export(bootCV)
 export(calcResid_MSARXmdl)
 export(calcResid_MSARmdl)
+export(calcResid_MSVARXmdl)
 export(calcResid_MSVARmdl)
 export(calc_DLmoments)
 export(calc_mu2t)
@@ -164,6 +173,7 @@ export(getHessian)
 export(initVals_HMmdl)
 export(initVals_MSARXmdl)
 export(initVals_MSARmdl)
+export(initVals_MSVARXmdl)
 export(initVals_MSVARmdl)
 export(interMSARmdl)
 export(interMSVARmdl)
@@ -188,6 +198,7 @@ export(mclike)
 export(mdledit)
 export(paramList_MSARXmdl)
 export(paramList_MSARmdl)
+export(paramList_MSVARXmdl)
 export(paramList_MSVARmdl)
 export(randP)
 export(randSN)
@@ -203,6 +214,7 @@ export(simuMSARX)
 export(simuMSARX_cpp)
 export(simuMSAR_cpp)
 export(simuMSVAR)
+export(simuMSVARX)
 export(simuMSVARX_cpp)
 export(simuMSVAR_cpp)
 export(simuMdl)
