fix plot.HMmdl() naming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,7 @@ S3method(nobs,MSVARmdl)
 S3method(nobs,Nmdl)
 S3method(nobs,VARmdl)
 S3method(plot,ARmdl)
-S3method(plot,Hmmdl)
+S3method(plot,HMmdl)
 S3method(plot,MSARmdl)
 S3method(plot,MSVARmdl)
 S3method(plot,Nmdl)
